[package]
name = "engine-backend"
version = "0.1.0"
edition = "2018"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]
description = "The backend implementation of Gigamono"
readme = "README.md"
repository = "https://github.com/gigamono/engine-backend"
keywords = ["no-code", "capabilities", "runtime", "serverless", "deno"]
categories = ["development-tools", "web-programming"]
documentation = "https://github.com/gigamono/engine-backend"
homepage = "https://gigamono.com"
license = "Apache-2.0"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }

[lib]
name = "engine_backend"
path = "lib/lib.rs"

[[bin]]
name = "server"
path = "bin/server.rs"
