[package]
name = "engine_runtime"
version = "0.1.0"
edition = "2018"
authors = ["Stephen Akinyemi <appcypher@outlook.com>"]
description = "The serverless implementation of Gigamono"
readme = "README.md"
repository = "https://github.com/gigamono/engine_runtime"
keywords = ["no-code", "capabilities", "runtime", "serverless", "deno"]
categories = ["development-tools", "web-programming"]
documentation = "https://github.com/gigamono/engine_runtime"
homepage = "https://gigamono.com"
license-file = "LICENSE"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utilities = { path = "../utilities" }
tera = { path = "../tera" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.14"
futures = "0.3.17"
bincode = "1.3.3"
futures-util = "0.3.17"
regex = "1.5.4"
sqlparser = "0.13.0"

[lib]
name = "engine_runtime"
path = "lib/lib.rs"

[[bin]]
name = "runtime_server"
path = "bin/runtime_server.rs"
